syntax = "proto3";
package isuxportal.proto.services.admin;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/admin";

import "isuxportal/resources/env_check.proto";

message ListEnvChecksQuery {
  int64 team_id = 1;
}

message ListEnvChecksResponse {
  repeated isuxportal.proto.resources.EnvCheck env_checks = 1;
}
