syntax = "proto3";
package isuxportal.proto.services.audience;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/audience";

import "isuxportal/resources/leaderboard.proto";

message DashboardQuery {}

message DashboardResponse {
  isuxportal.proto.resources.Leaderboard leaderboard = 1;
}

message SoloDashboardQuery {}

message SoloDashboardResponse {
  isuxportal.proto.resources.LeaderboardItem leaderboard_item = 1;
}
