syntax = "proto3";
package isuxportal.proto.services.contestant;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/contestant";

message GetCloudFormationQuery {}

message GetCloudFormationResponse {
  string template = 1;
}
